--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
 			<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
 			<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-responsive.min.css') }}" />
 			<link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}" />
-	
+			<link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}" />
 			<!-- SUPPORT FOR IE6-8 OF HTML5 ELEMENTS -->
 			<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -21,6 +21,7 @@
 			<link rel="shortcut icon" href="{{ url_for('static', filename='ico/favicon.ico') }}">
 			<script src="{{ url_for('static', filename='js/jquery-1.9.1.min.js') }}"></script>
 			<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+			<script src="{{ url_for('static', filename='js/bootstrap-affix.js') }}"></script>
 		{% endblock %}
 	</head>
 
